# Marco-cloud-agent

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  INTEGRATION.md  LESSONS_LEARNED.md  README.md  SESSION_HANDOFF.md  bot.py  botrunner.py  claude-debug.md  claude-nextsteps.md  env.example  gpt-5.2-debug.mm  main.py  package-lock.json  pcc-deploy.toml  prompts.py  pyproject.toml  requirements.txt  simli_debug_bot.py
knowledge/: README.md
processors/: __init__.py  rag_processor.py
rag/: __init__.py  embeddings.py  retriever.py
scripts/: ingest_documents.py
